# rattler_build_test

./: README.md  conda_env.yml  meson.build  pyproject.toml  setup.cfg
rattler_build_test/: add.F90  add.py
recipe/: meta.yaml  recipe.yaml  recipe_error.yaml
