[metadata]
name = rattler_build_test
description = Test for rattler
long_description = file: README.md
long_description_content_type = text/markdown
author = DTU Wind Energy
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
url=https://docs-wasp.ramtt.xyz/windkit

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    cf-xarray >= 0.7
    dtu_config
    lxml >=4
    netcdf4 >=1.5
    numpy >=1.21
    packaging >=21
    pandas >=1
    pyproj >=2.2.2
    scipy >=1
    shapely >=1
    xarray >=2022
    rioxarray >=0.12
