[metadata]
name = rattler_build_test
description = Test for rattler
long_description = file: README.md
long_description_content_type = text/markdown
author = DTU Wind Energy
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
